# CIC-IIA

./: .gitignore  CMakeLists.txt  CampeonatoPub.cpp  Doxyfile.in  README.md  utils.cmake
libGames/: CMakeLists.txt  readme.txt
libGames/games/Pub/: PubAction.h  PubMatch.h  PubPlayer.h  PubRandomPlayer.h  PubState.cpp  PubState.h  TestPub.cpp
libGames/games/TicTacToe/: TestTicTacToe.cpp  TicTacToe.hs  TicTacToeAction.h  TicTacToeDummyPlayer.h  TicTacToeMatch.h  TicTacToePlayer.h  TicTacToeSimplePlayer.h  TicTacToeState.h
libGames/include/: Game.hpp  GameResult.h  Match.hpp  Player.hpp  Statistics.hpp  Tournament.hpp  libGames.h
libGames/include/statistics/: MatchStats.hpp  PlayerStats.hpp
libGames/include/tournaments/: RoundRobinTournament.hpp  SingleEliminationTournament.hpp
libGames/src/: libGames.cpp
libGames/test/: PaperRockScissors.h  TestGame.cpp  TestMatch.cpp  TestPlayer.cpp  TestStatistics.cpp  TestTournament.cpp
libIIA/: CMakeLists.txt
libIIA/examples/: examples.hpp
libIIA/examples/Jugs/: Jug.h  Jugs.cpp  JugsAction.h  JugsProblem.h  JugsState.h
libIIA/examples/Missionaries/: Missionaries.cpp  MissionariesAction.h  MissionariesProblem.h  MissionariesState.h
libIIA/examples/NPuzzle/: NPuzzle.cpp  NPuzzleAction.h  NPuzzleProblem.h  NPuzzleState.h
libIIA/examples/Romania/: Romania.cpp  RomaniaAction.h  RomaniaProblem.h  RomaniaState.h
libIIA/examples/VacuumWorld/: VacuumWorld.cpp  VacuumWorldAction.h  VacuumWorldProblem.h  VacuumWorldReflexAgent.h  VacuumWorldSimpleProblemSolvingAgent.h  VacuumWorldState.h  VacuumWorldTableDrivenAgent.h
libIIA/include/: Action.hpp  Problem.hpp  State.hpp  libIIA.h
libIIA/include/Agents/: Agent.hpp  Agents.h  LearningAgent.hpp  ModelBasedReflexAgent.hpp  SimpleProblemSolvingAgent.hpp  TableDrivenAgent.hpp
libIIA/include/Search/: SearchResult.hpp
libIIA/include/Search/Informed/: BestFirstSearch.h  HeuristicSearchNode.hpp  InformedSearch.h
libIIA/include/Search/Local/: LocalSearch.h
libIIA/include/Search/Uninformed/: BidirectionalSearch.h  BreadthFirstSearch.h  DepthLimitedSearch.h  IterativeDeepeningSearch.h  UniformCostSearch.h  UninformedSearch.h  UninformedSearchNode.hpp
libIIA/include/Utils/: Graph.h  RandomUtils.h  StringUtils.h  TimeUtils.h  Utils.h
libIIA/src/: libIIA.cpp
libIIA/test/: TestAction.cpp  TestAction.h  TestProblem.cpp  TestProblem.h  TestState.cpp  TestState.h  TestUtils.cpp
libIIA/test/Agents/: TestSimpleProblemSolvingAgent.cpp  TestSimpleProblemSolvingAgent.h  TestTableDrivenAgent.cpp  TestTableDrivenAgent.h
libIIA/test/Search/: TestSearchResult.cpp
libIIA/test/Search/Informed/: TestBestFirstSearch.cpp  TestHeuristicNode.cpp
libIIA/test/Search/Uninformed/: TestBidirectionalSearch.cpp  TestBreadthFirstSearch.cpp  TestDepthLimitedSearch.cpp  TestIterativeDeepeningSearch.cpp  TestNode.cpp  TestUniformCostSearch.cpp
